--- a/onlyflans_project/onlyflans_web/static/css/styles.css
+++ b/onlyflans_project/onlyflans_web/static/css/styles.css
@@ -119,7 +119,7 @@
   }
 }
 
-/* Fuentes que eventualmente se utilizarán con link de google fonts
+/* Fuentes que podrían utilizarse con link de google fonts en el <head></head>
 
 .ubuntu-light {
   font-family: "Ubuntu", sans-serif;
