--- a/onlyflans_project/onlyflans_web/templates/index.html
+++ b/onlyflans_project/onlyflans_web/templates/index.html
@@ -2,6 +2,61 @@
 {% load static %}
 {% block 'content' %}
 <div>
-    inicio
+    <content id="inicio">
+        <div class="container p-3">
+
+            <h2>Ofertas Especiales</h2><hr>
+
+            <div class="row">
+              <!-- Postre 1 -->
+              <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="card mb-4">
+                  <img src="{% static 'img/card1.jpeg' %}" class="card-img-top p-3" alt="card1">
+                  <div class="card-body">
+                    <h5 class="card-title">Nulla id justo</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id justo justo. Sed sed leo non purus vehicula ullamcorper.</p>
+                    <a href="#" class="btn">Phasellus efficitur</a>
+                  </div>
+                </div>
+              </div>
+          
+              <!-- Postre 2 -->
+              <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="card mb-4">
+                  <img src="{% static 'img/card2.jpeg' %}" class="card-img-top p-3" alt="card2">
+                  <div class="card-body">
+                    <h5 class="card-title">Ullamcorper odio</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id justo justo. Sed sed leo non purus vehicula ullamcorper.</p>
+                    <a href="#" class="btn">Maecenas nec leo</a>
+                  </div>
+                </div>
+              </div>
+          
+              <!-- Postre 3 -->
+              <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="card mb-4">
+                  <img src="{% static 'img/card3.jpeg' %}" class="card-img-top p-3" alt="card3">
+                  <div class="card-body">
+                    <h5 class="card-title">Vestibulum ante</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id justo justo. Sed sed leo non purus vehicula ullamcorper.</p>
+                    <a href="#" class="btn">Sed id interdum</a>
+                  </div>
+                </div>
+              </div>
+          
+              <!-- Postre 4 -->
+              <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="card mb-4">
+                  <img src="{% static 'img/card4.jpeg' %}" class="card-img-top p-3" alt="card4">
+                  <div class="card-body">
+                    <h5 class="card-title">Sed sed leo</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id justo justo. Sed sed leo non purus vehicula ullamcorper.</p>
+                    <a href="#" class="btn">Vivamus malesuada</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+    </content>
 </div>
 {% endblock %}
