--- a/onlyflans_project/onlyflans_web/templates/welcome.html
+++ b/onlyflans_project/onlyflans_web/templates/welcome.html
@@ -2,6 +2,105 @@
 {% load static %}
 {% block 'content' %}
 <div>
-    bienvenido cliente
+    <content id="bienvenido">
+        <div class="container p-3">
+            <h2>Testimonios de Clientes</h2><hr>
+            <div class="row">
+                <!-- Columna de testimonios de clientes -->
+                <div class="col-lg-8">
+                    <!-- Tarjetas 1 -->
+                    <div class="card mb-3 m-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="{% static 'img/retrato.jpg' %}" class="img-fluid rounded-start" alt="Foto de cliente">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Carlos Sánchez</h5>
+                                    <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut velit eget nunc cursus interdum. Lorem ipsum dolor sit amet, consectetur adipis."</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Tarjetas 2 -->
+                    <div class="card mb-3 m-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="{% static 'img/retrato2.jpg' %}" class="img-fluid rounded-start" alt="Foto de cliente">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Sofía Martínez</h5>
+                                    <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut velit eget nunc cursus interdum. Lorem ipsum dolor sit amet, consectetur adipis."</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Tarjetas 3 -->
+                    <div class="card mb-3 m-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="{% static 'img/retrato3.jpg' %}" class="img-fluid rounded-start" alt="Foto de cliente">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Eduardo Flores</h5>
+                                    <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut velit eget nunc cursus interdum. Lorem ipsum dolor sit amet, consectetur adipis."</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Tarjetas 4 -->
+                    <div class="card mb-3 m-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="{% static 'img/retrato4.jpeg' %}" class="img-fluid rounded-start" alt="Foto de cliente">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Hiroshi Rodríguez</h5>
+                                    <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut velit eget nunc cursus interdum. Lorem ipsum dolor sit amet, consectetur adipis."</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Tarjetas 5 -->
+                    <div class="card mb-3 m-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="{% static 'img/retrato6.jpeg' %}" class="img-fluid rounded-start" alt="Foto de cliente">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Isabella Castro</h5>
+                                    <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut velit eget nunc cursus interdum. Lorem ipsum dolor sit amet, consectetur adipis."</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                                            
+                </div>
+                <!-- Columna del formulario -->
+                <div class="col-lg-4 p-3">
+                    <!-- Formulario de contacto -->
+                    <form id="formulario">
+                        <h5>Contáctanos</h5>
+                        <div class="mb-3">
+                            <label for="nombre" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="nombre" placeholder="Nombre">
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" placeholder="Email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="mensaje" class="form-label">Mensaje</label>
+                            <textarea class="form-control" id="mensaje" rows="3" placeholder="Mensaje"></textarea>
+                        </div>
+                        <button type="submit" class="btn">Enviar</button>
+                    </form>
+                </div>
+            </div>
+        </div>        
+    </content>
 </div>
 {% endblock %}
