--- a/onlyflans_project/onlyflans_web/templates/base.html
+++ b/onlyflans_project/onlyflans_web/templates/base.html
@@ -37,10 +37,13 @@
                             <a class="nav-link" href="/">Inicio</a>
                         </li>
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="/bienvenido">Bienvenido Cliente</a>
+                            <a class="nav-link" href="/bienvenido">Bienvenido</a>
                         </li>
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="/acerca">Acerca de Onlyflans</a>
+                            <a class="nav-link" href="/acerca">Acerca</a>
+                        </li>
+                        <li class="nav-item p-3">
+                            <a class="nav-link" href="/contacto">Contáctanos</a>
                         </li>
                     </ul>
                 </div>
