--- a/onlyflans_project/onlyflans_web/static/css/styles.css
+++ b/onlyflans_project/onlyflans_web/static/css/styles.css
@@ -20,6 +20,12 @@
   color: white;
 }
 
+.nav-login-logout {
+  border: 1px solid #fff;
+  border-radius: 5px;
+  padding: 10px;
+}
+
 #inicio {
   font-family: "Ubuntu", sans-serif;
 }
@@ -61,6 +67,34 @@
   text-align: center;
 }
 
+#cliente {
+  background-color: #FF4D4D;
+  color: white;
+  border-radius: 5px;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 5%;
+  padding-right: 5%;
+  margin-left: 20px;
+  margin-right: 20px;
+  text-align: center;
+}
+
+.btn-custom {
+  border-color: white;
+  color: white;
+  background-color: #FF4D4D;
+}
+
+#comentarios {
+  font-family: "Ubuntu", sans-serif;
+}
+
+#comentarios h2 {
+  padding: 30px;
+  text-align: center;
+}
+
 #testimonios img {
   width: 260px;
   height: 260px;
@@ -68,6 +102,11 @@
 }
 
 #bienvenido h5 {
+  padding-top: 50px;
+  font-style: none;
+}
+
+#comentarios h5 {
   padding-top: 50px;
   font-style: none;
 }
@@ -88,6 +127,15 @@
 }
 
 #contacto h2 {
+  padding: 30px;
+  text-align: center;
+}
+
+#login {
+  font-family: "Ubuntu", sans-serif;
+}
+
+#login h2 {
   padding: 30px;
   text-align: center;
 }
