--- a/onlyflans_project/onlyflans_web/templates/base.html
+++ b/onlyflans_project/onlyflans_web/templates/base.html
@@ -35,16 +35,31 @@
                     <ul class="navbar-nav">
                         <li class="nav-item p-3">
                             <a class="nav-link" href="/">Inicio</a>
-                        </li>
-                        <li class="nav-item p-3">
-                            <a class="nav-link" href="/bienvenido">Bienvenido</a>
-                        </li>
+                        </li>                        
                         <li class="nav-item p-3">
                             <a class="nav-link" href="/acerca">Acerca</a>
                         </li>
+                        {% if user.is_authenticated %}
+                            <li class="nav-item p-3">
+                                <a class="nav-link" href="/bienvenido">Bienvenido</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item p-3">
+                                <a class="nav-link" href="/testimonios">Testimonios</a>
+                            </li>
+                        {% endif %}                        
                         <li class="nav-item p-3">
                             <a class="nav-link" href="/contacto">Contáctanos</a>
                         </li>
+                        {% if user.is_authenticated %}
+                            <li class="nav-item p-3">
+                                <a class="nav-link nav-login-logout" href="{% url 'logout' %}">Cerrar Sesión</a>
+                            </li>
+                        {% else %}                        
+                            <li class="nav-item p-3">
+                                <a class="nav-link nav-login-logout" href="{% url 'login' %}?next={{request.path}}">Iniciar sesión</a>
+                            </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
